thegym/templates/istio-gateway-ui.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
#!/bin/bash
   name: ui-thegym
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ui-thegym
spec:
  hosts:
  - "*"
  gateways:
  - ui-thegym
  http:
  - route:
    - destination:
        port:
          number: 80
        host: ui
        subset: v2
      weight: 50
    - destination:
        port:
          number: 80
        host: ui
        subset: v1
      weight: 50
